[gd_scene load_steps=9 format=3 uid="uid://dmwalasuxji48"]

[ext_resource type="Script" path="res://levels/2/game.gd" id="1_dbg43"]
[ext_resource type="PackedScene" uid="uid://t1346vl8kt37" path="res://scenes/whole_scene.tscn" id="1_qq4n4"]
[ext_resource type="PackedScene" uid="uid://cbefsipxb2dw8" path="res://characters/player.tscn" id="2_tch6h"]
[ext_resource type="PackedScene" uid="uid://8wc8g6o34a35" path="res://characters/warrior_protect_castle.tscn" id="3_h64k1"]
[ext_resource type="PackedScene" uid="uid://bupgftai44g6l" path="res://scenes/player_following_camera.tscn" id="4_vdihp"]
[ext_resource type="Script" path="res://levels/2/spawn_bird.gd" id="5_ktgs2"]
[ext_resource type="AudioStream" uid="uid://bwvuvm56xpg2u" path="res://assets/audio/birds.ogg" id="6_jun28"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8mtol"]
size = Vector2(1000, 10000)

[node name="Game" type="Node2D"]
script = ExtResource("1_dbg43")

[node name="WholeScene" parent="." node_paths=PackedStringArray("player_following_cam") instance=ExtResource("1_qq4n4")]
position = Vector2(0, -2160)
player_following_cam = NodePath("../PlayerFollowingCamera")

[node name="Player" parent="." instance=ExtResource("2_tch6h")]
position = Vector2(11000, 760)

[node name="Warrior" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_h64k1")]
player = NodePath("../Player")

[node name="PlayerFollowingCamera" parent="." node_paths=PackedStringArray("target") instance=ExtResource("4_vdihp")]
target = NodePath("../Player")

[node name="SpawnBird" type="Node2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("5_ktgs2")
player = NodePath("../Player")

[node name="BirdAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_jun28")
autoplay = true

[node name="Goal" type="Area2D" parent="."]
position = Vector2(48000, -2160)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
shape = SubResource("RectangleShape2D_8mtol")

[connection signal="dead" from="Player" to="." method="_on_player_dead"]
[connection signal="left_screen" from="Player" to="." method="_on_player_left_screen"]
[connection signal="body_entered" from="Goal" to="." method="_on_goal_body_entered"]
